Allow word wrapping to fix mobile site

--- a/static/style.css
+++ b/static/style.css
@@ -3,6 +3,7 @@ body{
   height: 100%;
   background-attachment: fixed;
   background-position: center;
+  overflow-wrap: break-word;
 }
 div[id="foreground"]{
   font-family: 'Raleway';
